# structutils

./: .gitignore  notes.md  pyproject.toml  readme.md
.github/workflows/: publish.yml
configutils/: attr_docs.py  check.py  error.py  extend.py  generate.py  instantiate.py  load.py  test.py  utils.py
example/: main.py
src/structutils/: __init__.py
src/structutils/config/: annotations.py  check.py  check_test.py  error.py  extend.py  generate.py  generate_test.py  instantiate.py  instantiate_check.py  instantiate_test.py  load.py  utils.py
src/structutils/types/: format.py  format_test.py  infer.py  infer_test.py  resolve.py  resolve_test.py
typeutils/: __init__.py  format.py  get.py  infer.py  resolve.py
