[build-system]
requires = ["oryn~=2.1"]
build-backend = "oryn"

[project]
name = "pstructutils"
version = "1.0"
description = "Library for working with structured data"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = "~=3.14"

[project.urls]
Repository = "https://github.com/slietar/structutils"

[tool.oryn]
include = ["src/*"]
ignore = ["*_test.py"]
